# liminal

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONVENTIONS.toml  Cargo.toml  LICENSING.md  README.md  VISION.md  gates.json
crates/agora-sdk/: Cargo.toml
crates/agora-sdk/src/: error.rs  lib.rs
crates/haematite/: Cargo.toml
crates/haematite/src/: lib.rs
crates/haematite/src/api/: error.rs  event_store.rs  mod.rs  types.rs
crates/liminal/: Cargo.toml
crates/liminal-protocol/: Cargo.toml
crates/liminal-protocol/src/: client.rs  lib.rs
crates/liminal-protocol/src/algebra/: capacity.rs  capacity_tests.rs  floor.rs  floor_tests.rs  mod.rs  types.rs
crates/liminal-protocol/src/client/: authority_property_tests.rs  barrier.rs  correlation.rs  d1_flip_tests.rs  inbound.rs  r2_tests.rs  reconnect.rs  replay.rs  resume.rs  resume_decode.rs  resume_encode.rs  resume_tests.rs  review_tests.rs  rider_tests.rs  round3_tests.rs  round4_tests.rs  tests.rs
crates/liminal-protocol/src/lifecycle/: aggregate_commit.rs  aggregate_commit_tests.rs  attach.rs  attach_tests.rs  binding.rs  binding_fate.rs  binding_tests.rs  claim_frontier.rs  claim_frontier_tests.rs  closure_accounting.rs  closure_accounting_tests.rs  conversation.rs  conversation_codec.rs  conversation_tests.rs  cursor_facts.rs  cursor_facts_tests.rs  detach.rs  detach_tests.rs  edge.rs  edge_tests.rs  enrollment.rs  enrollment_closure.rs  enrollment_closure_tests.rs  enrollment_tests.rs  incarnation.rs  incarnation_tests.rs  lookup.rs  lookup_tests.rs  membership.rs  membership_tests.rs  mod.rs  obligation_dispatch.rs  observer_recovery.rs  observer_recovery_tests.rs  observer_recovery_transaction_tests.rs  operation_event.rs  operation_event_tests.rs  storage.rs  storage_tests.rs  test_support.rs  (+1 more)
crates/liminal-protocol/src/outcome/: internal.rs  internal_tests.rs  keepalive.rs  keepalive_tests.rs  local.rs  local_tests.rs  mod.rs  parking.rs  parking_tests.rs  startup.rs  startup_tests.rs
crates/liminal-protocol/src/wire/: authority_tests.rs  closure.rs  codec.rs  codec_server_push_acceptance_tests.rs  codec_tests.rs  envelope.rs  mod.rs  primitives.rs  push.rs  request.rs  response.rs  sequence_budget.rs  server_codec.rs  server_codec_tests.rs  tags.rs  tags_tests.rs
crates/liminal-protocol/tests/: acceptance_01_25.rs  acceptance_26_44.rs  acceptance_45_51.rs  acceptance_52_56.rs  algebra_fixtures.rs  conversation_restore.rs  properties.rs
crates/liminal-protocol/tests/support/: mod.rs
crates/liminal-sdk/: Cargo.toml
crates/liminal-sdk/examples/demo_feed_publisher/: authority.rs  cadence.rs  envelope.rs  graph.rs  jcs.rs  main.rs
crates/liminal-sdk/src/: channel.rs  conversation.rs  embedded.rs  error.rs  lib.rs  pressure.rs  remote.rs  types.rs
crates/liminal-sdk/src/connection/: lifecycle.rs  mod.rs  participant.rs  pool.rs  recovery.rs
crates/liminal-sdk/src/embedded/: tests.rs
crates/liminal-sdk/src/remote/: config.rs  handles.rs  participant.rs  protocol.rs  tcp.rs  tests.rs  websocket.rs
crates/liminal-sdk/tests/: conformance.rs  deployment_modes.rs  push_flush.rs  ws_authority_binding.rs  ws_browser_mirror_trace.rs  ws_driver_trace.rs  ws_transport_parity.rs
crates/liminal-server/: Cargo.toml
crates/liminal-server/src/: error.rs  lib.rs  main.rs  metrics.rs
crates/liminal-server/src/cluster/: discovery.rs  membership.rs  mod.rs  sync.rs
crates/liminal-server/src/config/: env.rs  file.rs  mod.rs  types.rs  validation.rs
crates/liminal-server/src/health/: checks.rs  endpoint.rs  metrics_route.rs  mod.rs
crates/liminal-server/src/server/: connection.rs  listener.rs  mod.rs  runtime.rs  shutdown.rs
crates/liminal-server/tests/: cluster_two_node.rs  pipelined_close.rs  push_flush_e2e.rs  sdk_tcp_e2e.rs  sdk_ws_e2e.rs  server_conversation_supervisor.rs  subscription_e2e.rs  teardown_delivery_e2e.rs  ws_transport_e2e.rs
crates/liminal-server/tests/trybuild/: fenced_attach_commit_cannot_split_twice.rs  fenced_attach_commit_cannot_split_twice.stderr  fenced_descriptions_remain_copy.rs  fenced_owner_cannot_mint_twice.rs  fenced_owner_cannot_mint_twice.stderr  fenced_proof_cannot_clone.rs  fenced_proof_cannot_clone.stderr  fenced_proof_cannot_copy.rs  fenced_proof_cannot_copy.stderr  fenced_proof_cannot_reuse_after_verify.rs  fenced_proof_cannot_reuse_after_verify.stderr  fenced_proof_fate_method_is_private.rs  fenced_proof_fate_method_is_private.stderr  fenced_raw_mint_is_private.rs  fenced_raw_mint_is_private.stderr  plain_leave_projection_removed.rs  plain_leave_projection_removed.stderr  production_connection_fate_cannot_select_process_killed.rs  production_connection_fate_cannot_select_process_killed.stderr  validated_marker_record_cannot_clone.rs  validated_marker_record_cannot_clone.stderr  validated_marker_record_cannot_copy.rs  validated_marker_record_cannot_copy.stderr  validated_marker_record_cannot_feed_two_recoveries.rs  validated_marker_record_cannot_feed_two_recoveries.stderr
crates/liminal/src/: causal.rs  envelope.rs  error.rs  lib.rs
crates/liminal/src/aion/: channels.rs  codec.rs  dispatch.rs  error.rs  history.rs  mod.rs  signal.rs  types.rs  worker.rs
crates/liminal/src/causal/: orderer.rs
crates/liminal/src/channel/: actor.rs  mod.rs  observer.rs  registry.rs  schema.rs  subscription.rs  supervisor.rs  tests.rs  types.rs  wire.rs
crates/liminal/src/conversation/: actor.rs  mod.rs  participant.rs  patterns.rs  types.rs
crates/liminal/src/durability/: bridge.rs  channel.rs  config.rs  conversation.rs  cursor.rs  dedup.rs  error.rs  mod.rs  receipt.rs  recovery.rs  replay.rs  store.rs
crates/liminal/src/metrics/: channel.rs  conversation.rs  export.rs  mod.rs  pressure.rs  registry.rs
crates/liminal/src/pressure/: capacity.rs  enforce.rs  mod.rs  monitor.rs  policy.rs  signal.rs
crates/liminal/tests/: channel_metrics.rs  conversation_metrics.rs  durability_channel.rs  durability_foundation.rs  durability_real_persistence.rs  metrics_registry.rs  pressure_metrics.rs
sdks/liminal-ts/wasm-src/: Cargo.toml
(+613 files in other folders)
