[workspace]
members = [
    "crates/liminal",
    "crates/liminal-sdk",
    "crates/liminal-server",
    "sdks/liminal-ts/wasm-src",
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/tomWhiting/liminal"
authors = [
    "Tom Whiting <tom@ablative.com.au>",
]

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
# Deliberate, project-wide policy decision — NOT a defect suppression.
# Public types are defined in submodules and surfaced both module-qualified
# (liminal::channel::ChannelHandle, liminal::durability::DurableStore) and via
# flat re-exports. The descriptive, greppable names (ChannelHandle, LiminalError)
# are the intended API; the de-prefixed forms (Handle, Error) are generic, less
# searchable, and collide at the crate root. This lint is one mature Rust
# codebases routinely disable for exactly this reason. Centralized here so the
# decision is documented and auditable in one place rather than scattered across
# per-file #![allow] headers.
module_name_repetitions = { level = "allow", priority = 1 }
