[workspace]
members = [
    "crates/liminal",
    "crates/liminal-protocol",
    "crates/liminal-sdk",
    "crates/liminal-server",
    "sdks/liminal-ts/wasm-src",
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "AGPL-3.0-only"
repository = "https://github.com/ablative-io/liminal"
authors = [
    "Tom Whiting <tom@ablative.com.au>",
]

# Single source of truth for every dependency version in the workspace. Members
# inherit with `{ workspace = true }` and layer on per-crate features. The two
# internal crates carry both a path (for local builds) and a version (what
# `cargo publish` ships to crates.io). `liminal` is published as `liminal-rs`
# because the bare name is taken on crates.io, but is imported as `liminal`.
[workspace.dependencies]
liminal = { package = "liminal-rs", version = "0.2.5", path = "crates/liminal" }
liminal-protocol = { version = "0.1.0", path = "crates/liminal-protocol" }
liminal-sdk = { version = "0.2.4", path = "crates/liminal-sdk" }

anyhow = "1"
async-trait = "0.1"
beamr = { version = "0.15.2", features = ["readiness"] }
chrono = "0.4.45"
clap = "4"
# `default-features = false` bases: members add `std`/`alloc` as they need. The
# `liminal-sdk` crate is `no_std`-capable, so it inherits the lean base and adds
# only `alloc`; the std crates add `std` explicitly. (Cargo forbids a member from
# re-enabling default features it disabled, so the lean base is the only base that
# can satisfy both.)
futures-core = { version = "0.3", default-features = false }
haematite = "0.4.1"
jsonschema = { version = "0.46.5", default-features = false }
rand = "0.10.1"
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false }
signal-hook = "0.3"
socket2 = "0.6"
spin = { version = "0.9", default-features = false, features = ["mutex", "spin_mutex"] }
tempfile = "3"
thiserror = { version = "2", default-features = false }
tokio = "1"
toml = "0.8"
tungstenite = { version = "0.30.0", default-features = false, features = ["handshake"] }
tracing = "0.1"
uuid = { version = "1.23.3", features = ["v4"] }
wasm-bindgen = "0.2.105"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
# Deliberate, project-wide policy decision — NOT a defect suppression.
# Public types are defined in submodules and surfaced both module-qualified
# (liminal::channel::ChannelHandle, liminal::durability::DurableStore) and via
# flat re-exports. The descriptive, greppable names (ChannelHandle, LiminalError)
# are the intended API; the de-prefixed forms (Handle, Error) are generic, less
# searchable, and collide at the crate root. This lint is one mature Rust
# codebases routinely disable for exactly this reason. Centralized here so the
# decision is documented and auditable in one place rather than scattered across
# per-file #![allow] headers.
module_name_repetitions = { level = "allow", priority = 1 }
