[package]
name = "haematite"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "In-memory mock of the haematite storage API (for developing/testing liminal's durability layer; not the real content-addressed engine)"

[dependencies]
thiserror = "2"
