[package]
name = "liminal-protocol"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Shared participant-lifecycle protocol types for liminal"

[lints]
workspace = true

[dev-dependencies]
proptest = "1"
