[package]
name = "liminal-protocol"
version = "0.3.0"
edition.workspace = true
rust-version.workspace = true
license = "Apache-2.0"
repository.workspace = true
authors.workspace = true
description = "Shared participant-lifecycle protocol types for liminal"

[features]
test-support = []

[lints]
workspace = true

[dev-dependencies]
proptest = "1"
