[package]
name = "liminal-sdk"
version = "0.2.3"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Application-facing SDK traits for liminal messaging clients"

[features]
default = ["std"]
# The real TCP transport requires std sockets and the canonical wire codec from
# the `liminal` crate, so it is only available with the `std` feature.
std = ["thiserror/std", "serde/std", "dep:liminal"]

[dependencies]
futures-core = { workspace = true }
liminal = { workspace = true, optional = true }
serde = { workspace = true, features = ["alloc"] }
serde_json = { workspace = true, features = ["alloc"] }
spin = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
