[package]
name = "liminal-server"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Standalone server for the liminal messaging bus"

[dependencies]
anyhow = "1"
beamr = { version = "0.11.0", features = ["json"] }
clap = { version = "4", features = ["derive"] }
haematite = "0.1.0"
liminal = { path = "../liminal" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
signal-hook = "0.3"
thiserror = "2"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "time"] }
toml = "0.8"
tracing = "0.1"

[dev-dependencies]
async-trait = "0.1"
futures-core = "0.3"
liminal-sdk = { path = "../liminal-sdk" }
tempfile = "3"

[lints]
workspace = true
