[package]
name = "liminal-server"
version = "0.2.3"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Standalone server for the liminal messaging bus"

[dependencies]
anyhow = { workspace = true }
beamr = { workspace = true, features = ["json"] }
clap = { workspace = true, features = ["derive"] }
haematite = { workspace = true }
liminal = { workspace = true }
serde = { workspace = true, features = ["std"] }
serde_json = { workspace = true, features = ["std"] }
signal-hook = { workspace = true }
thiserror = { workspace = true, features = ["std"] }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "net", "time"] }
toml = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
futures-core = { workspace = true, features = ["std"] }
liminal-sdk = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
