[package]
name = "liminal-server"
version = "0.2.5"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Standalone server for the liminal messaging bus"

[dependencies]
anyhow = { workspace = true }
beamr = { workspace = true, features = ["json"] }
clap = { workspace = true, features = ["derive"] }
haematite = { workspace = true }
liminal = { workspace = true }
liminal-protocol = { workspace = true }
serde = { workspace = true, features = ["std"] }
serde_json = { workspace = true, features = ["std"] }
signal-hook = { workspace = true }
thiserror = { workspace = true, features = ["std"] }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "net", "time"] }
toml = { workspace = true }
tracing = { workspace = true }
tungstenite = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
futures-core = { workspace = true, features = ["std"] }
# Test-gated construction seams (rooted ephemeral stores); the normal
# dependency entry above stays feature-free so the production graph never
# carries them.
liminal = { workspace = true, features = ["test-support"] }
liminal-sdk = { workspace = true }
# Test-only: shrink the client socket's SO_RCVBUF so a never-reading subscriber
# caps the in-flight TCP window far below an oversize frame, making the server's
# outbound WouldBlock-with-residue certain by construction (G4 regression).
socket2 = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
