[package]
name = "liminal"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "A conversation-based messaging bus built on beamr"

[dependencies]
async-trait = "0.1"
beamr = { version = "0.9.0", features = ["json"] }
chrono = "0.4.45"
haematite = "0.1.0"
jsonschema = { version = "0.46.5", default-features = false }
rand = "0.10.1"
serde_json = "1"
thiserror = "2"
tracing = "0.1"
uuid = { version = "1.23.3", features = ["v4"] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
