[package]
name = "liminal-rs"
version = "0.3.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "A conversation-based messaging bus built on beamr"

# Published as `liminal-rs` (the bare `liminal` name is taken on crates.io by an
# unrelated crate), but the library is imported as `liminal` everywhere — the
# crate name stays `liminal` and siblings depend on it via `package = "liminal-rs"`.
[lib]
name = "liminal"

[features]
# Test-only construction seams (rooted ephemeral stores) that would break
# lifecycle invariants if offered as general API; enabled by downstream crates'
# dev-dependencies only, never in a production dependency graph.
test-support = []

[dependencies]
async-trait = { workspace = true }
beamr = { workspace = true, features = ["cooperative", "json"] }
chrono = { workspace = true }
haematite = { workspace = true }
jsonschema = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true, features = ["std"] }
tempfile = { workspace = true }
thiserror = { workspace = true, features = ["std"] }
tracing = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
