[package]
name = "liminal-ts-wasm"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "WebAssembly bridge exposing liminal protocol framing to the TypeScript SDK"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
thiserror = "2"
wasm-bindgen = "0.2.105"

[lints]
workspace = true
