[package]
name = "liminal-ts-wasm"
version = "0.3.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "WebAssembly bridge exposing liminal protocol framing to the TypeScript SDK"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
thiserror = { workspace = true, features = ["std"] }
wasm-bindgen = { workspace = true }

[lints]
workspace = true
